--- a/trading-front-end/src/index.css
+++ b/trading-front-end/src/index.css
@@ -1,5 +1,8 @@
 body {
-  margin: 0;
+
+
+  padding: 0;
   min-width: 320px;
-  min-height: 100vh;
+  max-height: 100vh;
+  background-color: black;
 }
